Merge main into byte_for_diskbbq3
Resolve conflicts from main's API evolution:
- KMeansWithOverspill → KMeansNeighbors
- CentroidInformation refactoring (non-generic on main)
- CentroidIndex replacing secondLevelClusters
- HierarchicalKMeans/KMeansLocal signature changes (removed SOAR)
- ES950 reader format (new on main, adapted for byte support)
- DenseVectorFieldMapper query creation refactoring
- IVFKnnByteVectorQuery: prepareSegmentQuery replaces preconditionQuery
- QuantEncoding/CentroidIndexFormat moved to top-level enums

Writer files (IVFVectorsWriter, ES920, ES940, ESNext) taken from main
as-is — byte dispatch will be re-added using Simon's VectorEncoding
pattern in a subsequent commit.